# django-order-management

./: .env.example  Dockerfile  README.md  celerybeat-schedule  docker-compose.yml  middleware.py  pyproject.toml  requirements.txt  test_settings.py
config/: celery.py  settings.py  urls.py
orders/: models.py  tasks.py  tests.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_alter_order_status.py  0003_order_uid.py  0004_order_deleted_at.py  0005_alter_order_user.py  0006_alter_order_created_at_alter_order_deleted_at_and_more.py
orders/serializers/: cancel_order_serializer.py  create_order_serializer.py  list_order_serializer.py
users/: models.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_customuser_uid.py  0003_customuser_deleted_at.py  0004_alter_customuser_deleted_at.py
users/serializers/: login_serializer.py  register_serializer.py
